--- a/WarlockSimulatorTBC/Shared/ItemAndEnchantTables.razor
+++ b/WarlockSimulatorTBC/Shared/ItemAndEnchantTables.razor
@@ -50,6 +50,9 @@
     <div id='gem-options-gem-list'></div>
     <button id='gem-options-apply-button'>Apply</button>
 </div>
+
+<GemSelection socketColor="meta" />
+
 <table id="item-selection-table" data-type="mainhand" class="tablesorter" data-sortlist='[[11,1]]'>
     <colgroup id="item-selection-colgroup">
         <col style="width: 20%">
@@ -86,6 +89,7 @@
     <tbody aria-live='polite'>
         @foreach (var item in Items.itemSlots[Items.SelectedItemSlot].items)
         {
+            int socketCounter = 0;
             // If the item is a ring or a trinket, the item is unique, and it's equipped in the other item slot, then don't display it in the item list.
             if ((Items.SelectedItemSlot == ItemSlots.RING || Items.SelectedItemSlot == ItemSlots.TRINKET) && (item.Key == Items.SelectedItems[Items.SelectedItemSlot + (Items.SelectedItemSubSlot == "1" ? "2" : "1")]))
 			{
@@ -95,23 +99,13 @@
                 <td><a href="https://tbc.wowhead.com/item=@item.Key">@item.Value.name</a></td>
                 <td>
                     <div>
-                        <!-- todo: put this in a loop through the Sockets object -->
-                        @for (int i = 0; i < item.Value.meta; i++)
+                        @foreach (var socketColor in Sockets.sockets)
                         {
-                            <a href=""><img src="img/@Sockets.sockets["meta"].iconName" /></a>
-                        }
-                        @for (int i = 0; i < item.Value.red; i++)
-                        {
-                            <a href=""><img src="img/@Sockets.sockets["red"].iconName" /></a>
-                        }
-                        @for (int i = 0; i < item.Value.yellow; i++)
-                        {
-                            <a href=""><img src="img/@Sockets.sockets["yellow"].iconName" /></a>
-                        }
-                        @for (int i = 0; i < item.Value.blue; i++)
-                        {
-                            <a href=""><img src="img/@Sockets.sockets["blue"].iconName" /></a>
-                        }
+                            for (int i = 0; i < (int)item.Value.GetType().GetField(socketColor.Key).GetValue(item.Value); i++)
+                            {
+                                <a href="" @onclick="@(() => SocketClickHandler(socketColor.Key, ))"><img src="img/@Sockets.sockets[socketColor.Key].iconName" /></a>
+                            }
+                        } 
                     </div>
                 </td>
                 <td>@item.Value.source</td>
@@ -243,6 +237,11 @@
 
         await RefreshSidebarStats.InvokeAsync();
         await localStorage.SetItemAsync("selectedItems", Items.SelectedItems);
+    }
+
+    private void SocketClickHandler()
+    {
+
     }
 
     public void ReRender()
